@@ -1,9 +1,33 @@
 Hex Components - A simple hex viewer written in Java.
 
-Copyright (C) 2009-2013  Trejkaz, Hex Project
+Copyright (C) 2009-2014  Trejkaz, Hex Project
 
 
-BUILDING
+Usage
+-----
+
+For now, see the example in the examples/ subdirectory.
+
+
+UI Defaults
+-----------
+
+`HexViewer` supports the following additional UI defaults.
+In all cases, if a value is absent, sensible fallback logic is used to derive a value.
+
+| UI default                       | Fallback                                 |
+| -------------------------------- | ---------------------------------------- |
+| `HexViewer.background`           | `TextArea.background`                    |
+| `HexViewer.foreground`           | `TextArea.foreground`                    |
+| `HexViewer.selectionBackground`  | `TextArea.selectionBackground`           |
+| `HexViewer.selectionForeground`  | `TextArea.selectionForeground`           |
+| `HexViewer.cursorBackground`     | Darker version of `selectionBackground`  |
+| `HexViewer.cursorForeground`     | `selectionForeground`                    |
+| `HexViewer.cursorRowBackground`  | Lighter version of `selectionBackground` |
+| `HexViewer.font`                 | `TextArea.font`                          |
+
+
+Building
 --------
 
 You'll need a Java build environment.  I'm developing this on Java 7 at
