@@ -21,6 +21,7 @@ package org.trypticon.hex.plaf;
 import org.trypticon.hex.HexViewer;
 import org.trypticon.hex.binary.Binary;
 import org.trypticon.hex.renderer.CellRenderer;
+import org.trypticon.hex.util.DerivedColor;
 
 import javax.swing.Action;
 import javax.swing.ActionMap;
@@ -416,6 +417,33 @@ public class BasicHexViewerUI extends HexViewerUI {
         Color selectionForeground = viewer.getSelectionForeground();
         if (selectionForeground == null || selectionForeground instanceof ColorUIResource) {
             viewer.setSelectionForeground(getColour("selectionForeground"));
+        }
+
+        Color cursorBackground = viewer.getCursorBackground();
+        if (cursorBackground == null || cursorBackground instanceof ColorUIResource) {
+            Color colour = UIManager.getColor("HexViewer.cursorBackground");
+            if (colour == null) {
+                colour = new DerivedColor(viewer.getSelectionBackground(), 1.25f, -0.125f, 1.0f);
+            }
+            viewer.setCursorBackground(colour);
+        }
+
+        Color cursorForeground = viewer.getCursorForeground();
+        if (cursorForeground == null || cursorForeground instanceof ColorUIResource) {
+            Color colour = UIManager.getColor("HexViewer.cursorForeground");
+            if (colour == null) {
+                colour = viewer.getSelectionForeground();
+            }
+            viewer.setCursorForeground(colour);
+        }
+
+        Color cursorRowBackground = viewer.getCursorRowBackground();
+        if (cursorRowBackground == null || cursorRowBackground instanceof ColorUIResource) {
+            Color colour = UIManager.getColor("HexViewer.cursorRowBackground");
+            if (colour == null) {
+                colour = new DerivedColor(viewer.getSelectionBackground(), 1.0f, 0.0f, 0.25f);
+            }
+            viewer.setCursorRowBackground(colour);
         }
 
         Font font = viewer.getFont();
